--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://kolotiuk.github.io/command-js/",
+  "homepage": "https://kolotiuk.github.io/newTestRep/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /command-js/"
+    "build": "parcel build src/*.html --public-url /newTestRep/"
   },
   "repository": {
     "type": "git",
